--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
     <meta content="" name="description" />
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/img/favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/img/favicons//favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/img/favicons//favicon-16x16.png"
+    />
+    <link rel="manifest" href="/img/favicons//site.webmanifest" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -61,10 +78,10 @@
       <div class="top-bar row gx-0 align-items-center d-none d-lg-flex">
         <div class="col-lg-6 px-5 text-start">
           <small
-            ><i class="fa fa-map-marker-alt text-primary me-2"></i> American Corner Ikeja, 42, 
-            Local Airport Road, Concord Bus stop Ikeja, Lagos 102214
-            </small
-          >
+            ><i class="fa fa-map-marker-alt text-primary me-2"></i> American
+            Corner Ikeja, 42, Local Airport Road, Concord Bus stop Ikeja, Lagos
+            102214
+          </small>
           <small class="ms-4"
             ><i class="fa fa-clock text-primary me-2"></i>9.00 am - 9.00
             pm</small
@@ -72,11 +89,12 @@
         </div>
         <div class="col-lg-6 px-5 text-end">
           <small
-            ><i class="fa fa-envelope text-primary me-2"></i
-            > graydawninc@gmail.com</small
+            ><i class="fa fa-envelope text-primary me-2"></i>
+            graydawninc@gmail.com</small
           >
           <small class="ms-4"
-            ><i class="fa fa-phone-alt text-primary me-2"></i>+234 907 732 3249</small
+            ><i class="fa fa-phone-alt text-primary me-2"></i>+234 907 732
+            3249</small
           >
         </div>
       </div>
@@ -111,9 +129,8 @@
               <div class="dropdown-menu border-light m-0">
                 <a href="project.html" class="dropdown-item">Projects</a>
                 <a href="feature.html" class="dropdown-item">Features</a>
-                <a href="team.html" class="dropdown-item">Team Member</a>
+                <a href="team.html" class="dropdown-item">Team Members</a>
                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                <a href="404.html" class="dropdown-item">404 Page</a>
               </div>
             </div>
             <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -143,8 +160,38 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="w-100" src="img/carousel-2.jpg" alt="Image" />
-            <div class="w-100 h-100 bg-dark"></div>
+            <img class="w-100" src="img/softwaredevcarousel.png" alt="Image" />
+
+            <div class="carousel-caption">
+              <div class="container">
+                <div class="row justify-content-start">
+                  <div class="col-lg-8">
+                    <p
+                      class="d-none d-lg-inline-block bg-white rounded text-primary fw-semi-bold py-1 px-3 animated slideInDown"
+                    >
+                      Welcome to Graydawn
+                    </p>
+                    <h1 class="display-1 mb-4 animated slideInDown">
+                      Custom Software Development
+                    </h1>
+                    <p class="text-primary">
+                      We design and engineer bespoke software solutions tailored
+                      to business needs and objectives. From web, mobile
+                      applications and enterprise solutions to business
+                      consultancy and IT analysis.
+                    </p>
+                    <a
+                      href="/customservicedev.html"
+                      class="btn btn-primary py-3 px-5 animated slideInDown"
+                      >Explore More</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item position-relative">
+            <img class="w-100" src="img/mobiledevcarousel.png" alt="Image" />
             <div class="carousel-caption">
               <div class="container">
                 <div class="row justify-content-start">
@@ -155,7 +202,7 @@
                       Welcome to Graydawn
                     </p>
                     <h1 class="display-1 mb-4 animated slideInDown">
-                      Custom Software Development
+                      Mobile Development & Design Services
                     </h1>
                     <p class="text-primary">
                       We design and engineer bespoke software solutions tailored
@@ -164,7 +211,7 @@
                       consultancy and IT analysis.
                     </p>
                     <a
-                      href=""
+                      href="/mobiledevdesign.html"
                       class="btn btn-primary py-3 px-5 animated slideInDown"
                       >Explore More</a
                     >
@@ -173,19 +220,19 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <img class="w-100" src="img/carousel-2.jpg" alt="Image" />
+          <div class="carousel-item position-relative">
+            <img class="w-100" src="img/cmscarousel.png" alt="Image" />
             <div class="carousel-caption">
               <div class="container">
                 <div class="row justify-content-start">
-                  <div class="col-lg-7">
+                  <div class="col-lg-8">
                     <p
-                      class="d-none d-md-inline-block border border-white rounded text-primary fw-semi-bold py-1 px-3 animated slideInDown"
+                      class="d-none d-md-inline-block bg-white rounded text-primary fw-semi-bold py-1 px-3 animated slideInDown"
                     >
                       Welcome to Graydawn
                     </p>
                     <h1 class="display-1 mb-4 animated slideInDown">
-                      Custom Software Development
+                      Web App & CMS Development Services
                     </h1>
                     <p class="text-primary">
                       We design and engineer bespoke software solutions tailored
@@ -194,7 +241,7 @@
                       consultancy and IT analysis.
                     </p>
                     <a
-                      href=""
+                      href="/webdevandcms.html"
                       class="btn btn-primary py-3 px-5 animated slideInDown"
                       >Explore More</a
                     >
@@ -231,7 +278,7 @@
       <div class="container">
         <div class="row g-4 align-items-end mb-4">
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-            <img class="img-fluid rounded" src="img/about.jpg" />
+            <img class="img-fluid rounded" src="img/about_us.JPG" />
           </div>
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
             <p
@@ -584,7 +631,7 @@
                     <div class="position-relative h-100">
                       <img
                         class="position-absolute rounded w-100 h-100"
-                        src="img/service-1.jpg"
+                        src="img/ai.jpg"
                         style="object-fit: cover"
                         alt=""
                       />
@@ -626,7 +673,7 @@
                     <div class="position-relative h-100">
                       <img
                         class="position-absolute rounded w-100 h-100"
-                        src="img/service-2.jpg"
+                        src="img/cloud.jpg"
                         style="object-fit: cover"
                         alt=""
                       />
@@ -667,7 +714,7 @@
                     <div class="position-relative h-100">
                       <img
                         class="position-absolute rounded w-100 h-100"
-                        src="img/service-3.jpg"
+                        src="img/custom_software.jpg"
                         style="object-fit: cover"
                         alt=""
                       />
@@ -707,7 +754,7 @@
                     <div class="position-relative h-100">
                       <img
                         class="position-absolute rounded w-100 h-100"
-                        src="img/service-4.jpg"
+                        src="img/blockchain.jpg"
                         style="object-fit: cover"
                         alt=""
                       />
@@ -770,7 +817,7 @@
                 >
                   Get In Touch
                 </p>
-                <h1 class="display-5 mb-5">Request A Qoute</h1>
+                <h1 class="display-5 mb-5">Request A Quote</h1>
               </div>
               <div class="row g-3">
                 <div class="col-sm-6">
@@ -904,38 +951,59 @@
         >
           <div class="project-item pe-5 pb-5">
             <div class="project-img mb-3">
-              <img class="img-fluid rounded" src="img/service-1.jpg" alt="" />
-              <a href=""><i class="fa fa-link fa-3x text-primary"></i></a>
+              <img
+                class="img-fluid rounded"
+                src="img/custom_software.jpg"
+                alt=""
+              />
+              <a href="https://www.cgvakindia.com/custom-software-development/"
+                ><i class="fa fa-link fa-3x text-primary"></i
+              ></a>
             </div>
             <div class="project-title">
-              <h4 class="mb-0">Financial Planning</h4>
+              <h4 class="mb-0" style="font-size: 1rem">
+                Custom Software Development
+              </h4>
             </div>
           </div>
           <div class="project-item pe-5 pb-5">
             <div class="project-img mb-3">
-              <img class="img-fluid rounded" src="img/service-2.jpg" alt="" />
-              <a href=""><i class="fa fa-link fa-3x text-primary"></i></a>
+              <img class="img-fluid rounded" src="img/web_dev.jpg" alt="" />
+              <a href="https://www.cgvakindia.com/web-application-development/"
+                ><i class="fa fa-link fa-3x text-primary"></i
+              ></a>
             </div>
             <div class="project-title">
-              <h4 class="mb-0">Cash Investment</h4>
+              <h4 class="mb-0" style="font-size: 1rem">
+                Web Application Development
+              </h4>
+            </div>
+          </div>
+          <div class="project-item pe-5 pb-5 h-100">
+            <div class="project-img mb-3 h-100">
+              <img class="img-fluid rounded" src="img/mobile_dev.jpg" alt="" />
+              <a href="https://www.cgvakindia.com/mobile-development-services/"
+                ><i class="fa fa-link fa-3x text-primary"></i
+              ></a>
+            </div>
+            <div class="project-title">
+              <h4 class="mb-0" style="font-size: 1rem">
+                Mobile Development & Design
+              </h4>
             </div>
           </div>
           <div class="project-item pe-5 pb-5">
             <div class="project-img mb-3">
-              <img class="img-fluid rounded" src="img/service-3.jpg" alt="" />
-              <a href=""><i class="fa fa-link fa-3x text-primary"></i></a>
+              <img class="img-fluid rounded" src="img/cms.jpg" alt="" />
+              <a
+                href="https://www.cgvakindia.com/web-content-management-system/"
+                ><i class="fa fa-link fa-3x text-primary"></i
+              ></a>
             </div>
             <div class="project-title">
-              <h4 class="mb-0">Financial Consultancy</h4>
-            </div>
-          </div>
-          <div class="project-item pe-5 pb-5">
-            <div class="project-img mb-3">
-              <img class="img-fluid rounded" src="img/service-4.jpg" alt="" />
-              <a href=""><i class="fa fa-link fa-3x text-primary"></i></a>
-            </div>
-            <div class="project-title">
-              <h4 class="mb-0">Business Loans</h4>
+              <h4 class="mb-0" style="font-size: 1rem">
+                Web Content Management
+              </h4>
             </div>
           </div>
         </div>
@@ -963,7 +1031,7 @@
             <div class="team-item">
               <img class="img-fluid rounded" src="img/team-1.jpg" alt="" />
               <div class="team-text">
-                <h4 class="mb-0">Kate Winslet</h4>
+                <h4 class="mb-0">Clinton Dike</h4>
                 <div class="team-social d-flex">
                   <a class="btn btn-square rounded-circle mx-1" href=""
                     ><i class="fab fa-facebook-f"></i
@@ -982,7 +1050,7 @@
             <div class="team-item">
               <img class="img-fluid rounded" src="img/team-2.jpg" alt="" />
               <div class="team-text">
-                <h4 class="mb-0">Jac Jacson</h4>
+                <h4 class="mb-0">Clinton Dike</h4>
                 <div class="team-social d-flex">
                   <a class="btn btn-square rounded-circle mx-1" href=""
                     ><i class="fab fa-facebook-f"></i
@@ -1001,7 +1069,7 @@
             <div class="team-item">
               <img class="img-fluid rounded" src="img/team-3.jpg" alt="" />
               <div class="team-text">
-                <h4 class="mb-0">Doris Jordan</h4>
+                <h4 class="mb-0">Clinton Dike</h4>
                 <div class="team-social d-flex">
                   <a class="btn btn-square rounded-circle mx-1" href=""
                     ><i class="fab fa-facebook-f"></i
@@ -1045,68 +1113,74 @@
               <div class="btn-square bg-white border rounded-circle">
                 <i class="fa fa-quote-right fa-2x text-primary"></i>
               </div>
-              Dolores sed duo clita tempor justo dolor et stet lorem kasd labore
-              dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore
-              et tempor diam tempor erat.
+              Working with Graydawn was a game-changer for our business. Their
+              expertise in custom software development helped us streamline our
+              operations and improve efficiency. Highly recommend their
+              services.
             </div>
             <img
               class="rounded-circle mb-3"
               src="img/testimonial-1.jpg"
               alt=""
             />
-            <h4>Client Name</h4>
-            <span>Profession</span>
+            <h4>Sarah Johnson</h4>
+            <span>CEO, TechSolutions Inc.</span>
           </div>
           <div class="testimonial-item">
             <div class="testimonial-text border rounded p-4 pt-5 mb-5">
               <div class="btn-square bg-white border rounded-circle">
                 <i class="fa fa-quote-right fa-2x text-primary"></i>
               </div>
-              Dolores sed duo clita tempor justo dolor et stet lorem kasd labore
-              dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore
-              et tempor diam tempor erat.
+              Graydawn delivered exactly what we needed and more. Their team
+              went above and beyond to understand our requirements and created a
+              tailored software solution that exceeded our expectations. Great
+              communication and professionalism throughout the project.
             </div>
             <img
               class="rounded-circle mb-3"
               src="img/testimonial-2.jpg"
               alt=""
             />
-            <h4>Client Name</h4>
-            <span>Profession</span>
+            <h4>Mike Baker</h4>
+            <span>Head of IT, Global Enterprises Ltd.</span>
           </div>
           <div class="testimonial-item">
             <div class="testimonial-text border rounded p-4 pt-5 mb-5">
               <div class="btn-square bg-white border rounded-circle">
                 <i class="fa fa-quote-right fa-2x text-primary"></i>
               </div>
-              Dolores sed duo clita tempor justo dolor et stet lorem kasd labore
-              dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore
-              et tempor diam tempor erat.
+              Choosing Graydawn for our software development needs was one of
+              the best decisions we made. Their attention to detail and
+              commitment to delivering quality results impressed us. They truly
+              understand the complexities of our industry and delivered a
+              solution that addressed our specific challenges.
             </div>
             <img
               class="rounded-circle mb-3"
               src="img/testimonial-3.jpg"
               alt=""
             />
-            <h4>Client Name</h4>
-            <span>Profession</span>
+            <h4>Emily Parker</h4>
+            <span>CTO, InnovateTech Solutions</span>
           </div>
           <div class="testimonial-item">
             <div class="testimonial-text border rounded p-4 pt-5 mb-5">
               <div class="btn-square bg-white border rounded-circle">
                 <i class="fa fa-quote-right fa-2x text-primary"></i>
               </div>
-              Dolores sed duo clita tempor justo dolor et stet lorem kasd labore
-              dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore
-              et tempor diam tempor erat.
+              We've partnered with Graydawn on multiple projects, and they
+              consistently deliver outstanding results. Their team is
+              knowledgeable, reliable, and dedicated to providing innovative
+              solutions. It's been a pleasure working with them, and we look
+              forward to continuing our partnership in the future.
             </div>
             <img
               class="rounded-circle mb-3"
               src="img/testimonial-4.jpg"
               alt=""
             />
-            <h4>Client Name</h4>
-            <span>Profession</span>
+            <h4>Michael Adams</h4>
+            <span>Project Manager, BrightFuture Technologies</span>
           </div>
         </div>
       </div>
@@ -1199,10 +1273,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-            &copy; <a class="border-bottom" href="#">Graydawn</a>, All
-            Right Reserved.
+            &copy; <a class="border-bottom" href="#">Graydawn</a>, All Right
+            Reserved.
           </div>
-     
         </div>
       </div>
     </div>
