--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
                 src="img/custom_software.jpg"
                 alt=""
               />
-              <a href="https://www.cgvakindia.com/custom-software-development/"
+              <a href="/customservicedev.html"
                 ><i class="fa fa-link fa-3x text-primary"></i
               ></a>
             </div>
@@ -969,7 +969,7 @@
           <div class="project-item pe-5 pb-5">
             <div class="project-img mb-3">
               <img class="img-fluid rounded" src="img/web_dev.jpg" alt="" />
-              <a href="https://www.cgvakindia.com/web-application-development/"
+              <a href="/webdevandcms.html"
                 ><i class="fa fa-link fa-3x text-primary"></i
               ></a>
             </div>
@@ -982,7 +982,7 @@
           <div class="project-item pe-5 pb-5 h-100">
             <div class="project-img mb-3 h-100">
               <img class="img-fluid rounded" src="img/mobile_dev.jpg" alt="" />
-              <a href="https://www.cgvakindia.com/mobile-development-services/"
+              <a href="/mobiledevdesign.html"
                 ><i class="fa fa-link fa-3x text-primary"></i
               ></a>
             </div>
@@ -996,7 +996,7 @@
             <div class="project-img mb-3">
               <img class="img-fluid rounded" src="img/cms.jpg" alt="" />
               <a
-                href="https://www.cgvakindia.com/web-content-management-system/"
+                href="/webdevandcms.html"
                 ><i class="fa fa-link fa-3x text-primary"></i
               ></a>
             </div>
